2020-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/module/Module.h: A few more #nocov tags
	* inst/include/Rcpp/XPtr.h: Idem

2019-12-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2019-12-29  Qiang Kou  <qkou@qkou.info>

	* inst/include/Rcpp/vector/Matrix.h: Ensure scalar OP matrix do not
	change right-hand side in operation
	* inst/tinytest/test_matrix.R: New tests
	* inst/tinytest/cpp/Matrix.cpp: Idem

2019-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2019-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/XPtr.h: Additional null check, refactored

2019-12-17  Kirill Müller  <krlmlr@mailbox.org>

	* inst/include/Rcpp/XPtr.h: Clear external pointer before finalizer

2019-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* R/Attributes.R (sourceCpp): Very minor cosmetic changes

2019-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2019-12-14  Dirk Eddelbuettel  <edd@debian.org>

	* R/Attributes.R (sourceCpp): Support new argument windowsDebugDLL to
	create a debug DLL, supported on Windows only
	* man/sourceCpp.Rd: Document it

	* src/date.cpp: A few more #nocov tage

2019-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp: A few more #nocov tags
	* src/attributes.cpp: Idem
	* src/barrier.cpp: Idem

2019-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: Turn verbose tests on in dev and on Travis

	* inst/tinytest/test_client_package.R: Finer-grained skip messages
	* inst/tinytest/test_module_client_package.R: Idem
	* inst/tinytest/test_expose_class.R: Idem
	* inst/tinytest/test_interface.R: Idem
	* inst/tinytest/test_rcpp_package_skeleton.R: Idem
	* inst/tinytest/test_reference.R: Idem
